add build script to package.json for streamlined project builds

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Microfrontends using a NextJS Host and React remotes",
   "scripts": {
-    "start": "pnpm -r --no-bail --workspace-concurrency 100 start"
+    "start": "pnpm -r --no-bail --workspace-concurrency 100 start",
+    "build": "pnpm -r --no-bail build"
   },
   "keywords": [],
   "author": "Chris Fryer <cfryerdev@gmail.com>",
